# mc_xarm

./: .clang-format  .clang-tidy  .cmake-format.yaml  .pre-commit-config.yaml  CMakeLists.txt  README.md  mc_local_log.json
.github/workflows/: build.yml
etc/: communication.yaml  mc_rtc.yaml
include/: interface.h
mujoco_description/: CMakeLists.txt
mujoco_description/Lite6/: CMakeLists.txt
mujoco_description/Lite6/mc_mujoco/: lite6.in.yaml
mujoco_description/Lite6/xml/: lite6.in.xml  lite6.xml
mujoco_description/xArm5/: CMakeLists.txt
mujoco_description/xArm5/mc_mujoco/: xarm5.in.yaml
mujoco_description/xArm5/xml/: scene.xml  xarm5.in.xml
mujoco_description/xArm6/: CMakeLists.txt
mujoco_description/xArm6/mc_mujoco/: xarm6.in.yaml
mujoco_description/xArm6/xml/: xarm6.in.xml
mujoco_description/xArm7/: CMakeLists.txt
mujoco_description/xArm7/mc_mujoco/: xarm7.in.yaml
mujoco_description/xArm7/xml/: xarm7.in.xml  xarm7.xml
mujoco_description/xArm7Mirror/: CMakeLists.txt
mujoco_description/xArm7Mirror/mc_mujoco/: xarm7_mirror.in.yaml
mujoco_description/xArm7Mirror/xml/: scene.xml  xarm7_mirror.in.xml
src/: CMakeLists.txt  config.in.h  interface.cpp  main.cpp  xarm.cpp  xarm.h  xarm.in.cpp
tests/: CMakeLists.txt  loader.in.cpp
xacro/: lite6.urdf.in.xacro  xarm5.urdf.in.xacro  xarm6.urdf.in.xacro  xarm7.urdf.in.xacro  xarm7_mirror.urdf.in.xacro
